revamped the site css from scratch and added base template
Added the following files:
+ layout.html --> base template containing cdn links and jquery, which is extended by other files

Changes:
+ renamed 'login.css' to 'style.css' and deleted most of the styling
+ modified all the html files to extend layout.html
+ used tailwindcss to style the elements

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Error</title>
-</head>
-<body>
-	<h1>Something went wrong, try again...</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% set title='Error' %}
+
+{% block content %}
+  <h1>Something went wrong, try again...</h1>
+{% endblock content %}
