--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<title>Index</title>
-</head>
-<body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-		</button>
+{% extends "layout.html" %}
 
-		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-	  		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-		      	<li class="nav-item active">
-		        	<a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
-		      	</li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="register">Register</a>
-		      </li>
-		      <li>
-		      	<a class="nav-link" href="login">Login</a>
-		      </li>
-	    	</ul>
-	    <form class="form-inline my-2 my-lg-0">
-	    	<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-	    </form>
-	  </div>
-	</nav>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>
+{% set title='Index' %}
+
+{% block content %}
+  <nav class="bg-white shadow-md hover:shadow-xl transition-all duration-100 ease-in-out top flex flex-row items-center p-3">
+    <a class="text-xl hover:text-gray-800" href="#">Forum Name</a>
+    <ul class="ml-auto flex flex-row items-center">
+      <li class="mx-3">
+        <a class="hover:text-blue-700" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="mx-3">
+        <a class="hover:text-blue-700" href="{{ url_for('register') }}">Register</a>
+      </li>
+      <li class="mx-3">
+        <a class="hover:text-blue-700" href="{{ url_for('login') }}">Login</a>
+      </li>
+    </ul>
+  </nav>
+{% endblock content %}
