--- a/templates/login.html
+++ b/templates/login.html
@@ -1,37 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Login</title>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
-</head>
+{% extends "layout.html" %}
 
+{% set title='Login' %}
 
-
-<body>
-{% for category, message in get_flashed_messages(with_categories = true) %}
+{% block content %}
+  {% for category, message in get_flashed_messages(with_categories = true) %}
     <div class="{{ category }}">{{ message }}</div>
-{% endfor %}
-
-
-  <div class="wrapper fadeInDown">
-    <div id="formContent">
-      <!-- Tabs Titles -->
-
-      <!-- Icon -->
-      <div class="fadeIn first">
-        <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-      </div>
-
-      <!-- Login Form -->
-      <form action="#" method="post">
-        <input type="text" id="login" class="fadeIn second" name="username" placeholder="Username">
-        <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
-        <input type="submit" class="fadeIn fourth" value="Log In">
-      </form>
-    </div>
+  {% endfor %}
+  <div class="form-box shadow-md hover:shadow-xl transition-all duration-500 ease-in-out top p-8">
+    <form class="flex flex-col items-center" action="#" method="post">
+      <h1 class="text-2xl text-blue-600 font-bold mb-5">Member Login</h1>
+      <input type="text" id="login" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="username" placeholder="Username">
+      <input type="password" id="password" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="password" placeholder="Password">
+      <input type="submit" class="my-2 rounded outline-none mt-4 py-1 px-5 border-b-4" value="Log In">
+      <a href="{{ url_for('register') }}" class="text-xs mt-3 text-gray-600 hover:text-gray-900">Don't have an account? Create one now!</a>
+    </form>
   </div>
-</body>
-</html>
+{% endblock content %}
