--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Success!</title>
-</head>
-<body>
-	<h1>The user was created succesfully</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% set title='Success!' %}
+
+{% block content %}
+  <h1>The user was created succesfully</h1>
+{% endblock content %}
