--- a/templates/create.html
+++ b/templates/create.html
@@ -7,8 +7,8 @@
   <form class="flex flex-col items-center" action="#" method="post">
     <h1 class="text-2xl mb-2">Create a thread</h1>  
     <div class="flex flex-col items-center w-2/3">
-      <input type="text" class="rounded outline-none bg-gray-100 focus:bg-gray-200 p-1 px-3 text-2xl" name="title" placeholder="Add a title to the thread">
-      <input type="text" class="my-1 mb-4 rounded outline-none bg-gray-100 focus:bg-gray-200 p-1 px-3 text-2xl" name="content" placeholder="Add the content">
+      <input style="font-weight: bold;" type="text" class="rounded outline-none bg-gray-100 focus:bg-gray-200 p-1 px-3 text-2xl" name="title" placeholder="Add a title to the thread">
+      <textarea cols="30" rows="10" class="my-1 mb-4 rounded outline-none bg-gray-100 focus:bg-gray-200 p-1 px-3 text-2xl" placeholder="Add the content"></textarea>
     </div>
     <input type="submit" class="rounded outline-none bg-green-500 mt-4 py-1 px-5 border-b-4" value="Create thread">
   </form>
