--- a/templates/register.html
+++ b/templates/register.html
@@ -10,6 +10,7 @@
         <input type="text" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="username" placeholder="Username">
         <input type="password" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="password" placeholder="Password">
         <input type="password" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="password_confirm" placeholder="Confirm Password">
+        <textarea name="description" cols="30" rows="10" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" placeholder="Description Of Yourself"></textarea>
         <input type="submit" class="my-2 rounded outline-none mt-4 py-1 px-5 border-b-4" value="Register">
         <a href="{{ url_for('login') }}" class="text-xs mt-3 text-gray-600 hover:text-gray-900">Already have an account? Click to login</a>
     </form>
