Change text in autentication

--- a/templates/authentication.html
+++ b/templates/authentication.html
@@ -6,7 +6,7 @@
 	  		<h1 class="text-2xl text-blue-600 font-bold mb-5">Authentication</h1>
 	  		<input type="text" id="login" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="username" placeholder="Username">
 	  		<input type="password" id="password" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="password" placeholder="Password">
-	  		<input type="submit" class="my-2 rounded outline-none mt-4 py-1 px-5 border-b-4" value="Log In">
+	  		<input type="submit" class="my-2 rounded outline-none mt-4 py-1 px-5 border-b-4" value="Confirm">
 		</form>
 	</div>
 
