--- a/templates/posts.html
+++ b/templates/posts.html
@@ -4,21 +4,36 @@
 
 {% block content %}
   
-  <h1 class="text-3xl text-center"><a href="{{ url_for('index') }}">Forum Name</a></h1>
-  <div class="container ml-auto mr-auto mt-6 ">
-    <h1 class="text-sm font-bold text-gray-700 mb-2">RECENT POSTS</h1>
-    {% for post in posts %}
-      <div class="border-b-4 hover:border-gray-500 transition-all duration-300 ease-in-out rounded bg-gray-200 mb-4 p-3 px-6">
+	<h1 class="text-3xl text-center"><a href="{{ url_for('index') }}">Forum Name</a></h1>
+	<div class="container ml-auto mr-auto mt-6 ">
+	<form action="#" method="post">
+		<input type="text" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="search" placeholder="Search">
+		<input type="submit" value="Look for it" class="my-2 rounded outline-none mt-4 py-1 px-5 border-b-4">
+	</form>
+	<h1 class="text-sm font-bold text-gray-700 mb-2">RECENT POSTS</h1>
+	{% for i in search_results %}
+		<div class="border-b-4 hover:border-gray-500 transition-all duration-300 ease-in-out rounded bg-gray-200 mb-4 p-3 px-6">
+			<details class="cursor-pointer">
+		  		<summary  class="outline-none flex items-center">
+				<span>{{ search_results[loop.index - 1][1] }}</span>
+				<span class="text-sm text-gray-700 ml-auto">By {{ search_results[loop.index - 1][3] }} at {{ search_results[loop.index - 1][4] }}</span>
+		  		</summary>
+		  		<p class="text-sm py-1">{{ search_results[loop.index - 1][2] | truncate(30) }}</p>
+			</details>
+	  	</div>
+	{% endfor %}
+	{% for post in posts %}
+	  <div class="border-b-4 hover:border-gray-500 transition-all duration-300 ease-in-out rounded bg-gray-200 mb-4 p-3 px-6">
   
-        <details class="cursor-pointer">
-          <summary  class="outline-none flex items-center">
-            <span>{{ post[1] }}</span>
-            <span class="text-sm text-gray-700 ml-auto">By {{ post[3] }} at {{ post[4] }}</span>
-          </summary>
-          <p class="text-sm py-1">{{ post[2] | truncate(30) }}</p>
-          <button class="text-sm bg-blue-600 border-b-4 border-blue-700 font-bold text-white rounded p-1 px-3"><a href="{{ url_for('post_item', post_id=post[0] ) }}">Read More</a></button>
-        </details>
-      </div>
-    {% endfor %}
+		<details class="cursor-pointer">
+		  <summary  class="outline-none flex items-center">
+			<span>{{ post[1] }}</span>
+			<span class="text-sm text-gray-700 ml-auto">By {{ post[3] }} at {{ post[4] }}</span>
+		  </summary>
+		  <p class="text-sm py-1">{{ post[2] | truncate(30) }}</p>
+		  <button class="text-sm bg-blue-600 border-b-4 border-blue-700 font-bold text-white rounded p-1 px-3"><a href="{{ url_for('post_item', post_id=post[0] ) }}">Read More</a></button>
+		</details>
+	  </div>
+	{% endfor %}
   </div>
 {% endblock content %}
