--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,12 @@
 {% block content %}
   <div class="form-box shadow-md hover:shadow-xl transition-all duration-500 ease-in-out top p-6">
 	<form class="flex flex-col items-center" action="#" method="post">
-	  <h1 class="text-2xl text-blue-600 font-bold mb-5">Member Login</h1>
+	<h1 class="text-2xl text-blue-600 font-bold mb-5">Member Login</h1>
+	<div class="col-md-3 text-blue-600">
+		<a class="btn btn-outline-dark" href="/login/google" role="button" style="text-transform:none;">
+			<img width="20px" style="margin-bottom:3px; margin-right:5px;" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />Login with Google
+    	</a>
+  	</div>
 	  <input type="text" id="login" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="username" placeholder="Username">
 	  <input type="password" id="password" class="my-2 rounded-md outline-none bg-gray-200 p-1 px-3" name="password" placeholder="Password">
 	  <input type="submit" class="my-2 rounded outline-none mt-4 py-1 px-5 border-b-4" value="Log In">
